{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 10,
  "lineage": "cbf08771-41bd-46e1-1c0f-bc0beb2ae84b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efa2909981e4662c",
            "domain": "vpc",
            "id": "eipalloc-0efa2909981e4662c",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-212-94-77.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.94.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic-ip"
            },
            "tags_all": {
              "Name": "Elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:030356677859:internet-gateway/igw-05686ef380e5f051b",
            "id": "igw-05686ef380e5f051b",
            "owner_id": "030356677859",
            "tags": {
              "Name": "Internet-gateway"
            },
            "tags_all": {
              "Name": "Internet-gateway"
            },
            "vpc_id": "vpc-0bebc4569c0098cfd"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efa2909981e4662c",
            "connectivity_type": "public",
            "id": "nat-0b0b6299311bc40c9",
            "network_interface_id": "eni-0fb2e735b49d9229c",
            "private_ip": "10.0.0.185",
            "public_ip": "52.212.94.77",
            "subnet_id": "subnet-05c8e2f0263b14df0",
            "tags": {
              "Name": "Nat-gateway"
            },
            "tags_all": {
              "Name": "Nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:030356677859:route-table/rtb-04a322a426f5605d9",
            "id": "rtb-04a322a426f5605d9",
            "owner_id": "030356677859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b0b6299311bc40c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Routetable"
            },
            "tags_all": {
              "Name": "Private-Routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bebc4569c0098cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:030356677859:route-table/rtb-0d73329284d1d2876",
            "id": "rtb-0d73329284d1d2876",
            "owner_id": "030356677859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05686ef380e5f051b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Routetable"
            },
            "tags_all": {
              "Name": "Public-Routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bebc4569c0098cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:030356677859:subnet/subnet-04e968d8a04c97813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e968d8a04c97813",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030356677859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet"
            },
            "tags_all": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-0bebc4569c0098cfd"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:030356677859:subnet/subnet-05c8e2f0263b14df0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c8e2f0263b14df0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030356677859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-0bebc4569c0098cfd"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:030356677859:vpc/vpc-0bebc4569c0098cfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-049f97bf8e6727a84",
            "default_route_table_id": "rtb-0b399ab15bcd36589",
            "default_security_group_id": "sg-05ce9b6cc64b3f40f",
            "dhcp_options_id": "dopt-0129f8b12b6dc5c56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bebc4569c0098cfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b399ab15bcd36589",
            "owner_id": "030356677859",
            "tags": {
              "Name": "New-VPC"
            },
            "tags_all": {
              "Name": "New-VPC"
            }
          }
        }
      ]
    }
  ]
}